--- a/erc20/build.gradle
+++ b/erc20/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-library'
-    id 'org.web3j' version '4.9.4'
+    id 'org.web3j' version '4.9.8'
 }
 
 group 'com.jelurida'
@@ -17,7 +17,7 @@ web3j {
 }
 
 dependencies {
-    api("org.web3j:core:4.9.4")
+    api('org.web3j:core:4.9.8')
 }
 
 test {
